--- a/assets/package.json
+++ b/assets/package.json
@@ -7,10 +7,15 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "alpinejs": "^2.8.0",
+    "autoprefixer": "^10.2.3",
+    "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "nprogress": "^0.2.0"
+    "postcss": "^8.2.4",
+    "postcss-loader": "^4.2.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
