--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "alpinejs": "^2.8.0",
     "autoprefixer": "^10.2.3",
     "nprogress": "^0.2.0",
